--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emese<3</title>
+    <title>Cicaaaa</title>
     <link rel="stylesheet" href="hgs.css">
 
 </head>
 <body>
-    <img src="kézmár.gif" alt="Kézmár a gagadt macska">
+    <img src="kézmár.gif" alt="Kézmár a jégcsap mellű macska">
     <br>
     <br>
     <br>
